Added XPagedList for paging questions

--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/FalhaNaApliacacao.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/FalhaNaApliacacao.cshtml
@@ -21,7 +21,7 @@
         <div class="panel-body">
             <p><strong>Erro:</strong> @Model.Erro</p>
             <p><strong>Descrição:</strong> @Model.Descrição</p>
-            <p>Por favor informe este problema para juniormayhe@gmail.com e retorne à @Html.ActionLink("Página inicial", "Index", "Home").</p>
+            <p>Por favor informe este problema para juniormayhe@gmail.com e retorne à @Html.ActionLink("Página inicial", "Lista", "Questao").</p>
         </div>
     </div>
 </div>
