--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/PaginaNaoEncontrada.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/PaginaNaoEncontrada.cshtml
@@ -10,7 +10,7 @@
     <div class="alert alert-warning" role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Prezado(a) usuário(a):</span>
-        Você tentou acessar um endereço inexistente. Retorne à @Html.ActionLink("Página inicial", "Index", "Home").
+        Você tentou acessar um endereço inexistente. Retorne à @Html.ActionLink("Página inicial", "Lista", "Questao").
     </div>
 </div>
 
