--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/RequisicaoInvalida.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/RequisicaoInvalida.cshtml
@@ -10,7 +10,7 @@
     <div class="alert alert-danger" role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <span class="sr-only">Prezado(a) usuário(a):</span>
-        Você informou dados inválidos. Retorne à @Html.ActionLink("Página inicial", "Index", "Home") e preencha corretamente os dados necessários.
+        Você informou dados inválidos. Retorne à @Html.ActionLink("Página inicial", "Lista", "Questao") e preencha corretamente os dados necessários.
     </div>
 </div>
 
