Remove question added

--- a/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
+++ b/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
@@ -69,3 +69,6 @@ textarea {
     -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+.ml {
+    margin-left: 27px;
+}
