--- a/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
+++ b/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
@@ -53,22 +53,33 @@ h1, h2, h3 {margin-top:40px}
 .panel-title {font-size:14px}
 
 textarea {
-    display:block;
+    display: block;
     width: 100%;
     height: 80px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.428571429;
     color: #555;
-    vertical-align: middle;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -moz-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .ml {
     margin-left: 27px;
+}
+#tabelaQuestoes {
+    clear: both;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 70px;
+}
+.right {
+    float:right
 }
