--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Adicionar.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Adicionar.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Cesgranrio.CorretorDeProvas.Web.Models.QuestaoVM
 
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Adicionar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Editar</h2>
+<h2>Adicionar</h2>
 
-@using (Html.BeginForm())
+
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
@@ -15,8 +16,6 @@
         <h4>Questão</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.QuestaoID)
-
         <div class="form-group">
             @Html.LabelFor(model => model.QuestaoNumero, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -67,7 +66,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Salvar" class="btn btn-primary btn-lg" />
+                <input type="submit" value="Confirmar" class="btn btn-primary btn-lg" />
             </div>
         </div>
     </div>
@@ -76,6 +75,7 @@
 <div>
     @Html.ActionLink("Voltar às questões", "Lista")
 </div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
