--- a/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
@@ -8,47 +8,175 @@
     <meta http-equiv="Content Type" content="text/html; charset=ISO-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Corretor de Provas Online</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Delius" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Corretor de Provas", "Lista", "Questao", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav logado">
-                    <li>@Html.ActionLink("Início", "Lista", "Questao")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Questao")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Questao")</li>
-                    @if (cpf == null)
-                    {
-                        <li>@Html.ActionLink("Entrar", "Login", "Usuario")</li>
-                    }
-                    else
-                    {
-                        <li><div class="texto navbar-item">Bem-vindo <strong>@cpf.FormatarCPF()</strong></div></li>
-                    }
+    <div class="wrapper">
+        <div class="sidebar" data-color="purple" data-image="/Content/tema/sidebar-2.jpg">
+
+            <!--
+
+                Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
+                Tip 2: you can also add an image using data-image tag
+
+            -->
+
+            <div class="sidebar-wrapper">
+                <div class="logo">
+                    <a href="/" class="simple-text">
+                        Corretor de provas
+                    </a>
+                </div>
+
+                <ul class="nav">
+                    <li class="active">
+                        <a href="/Questao/Lista">
+                            <i class="pe-7s-note2"></i>
+                            <p>Questões</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="user.html">
+                            <i class="pe-7s-user"></i>
+                            <p>Sobre</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="table.html">
+                            <i class="pe-7s-note2"></i>
+                            <p>Tabela</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="typography.html">
+                            <i class="pe-7s-news-paper"></i>
+                            <p>Typography</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="icons.html">
+                            <i class="pe-7s-science"></i>
+                            <p>Icons</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="maps.html">
+                            <i class="pe-7s-map-marker"></i>
+                            <p>Maps</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="notifications.html">
+                            <i class="pe-7s-bell"></i>
+                            <p>Notifications</p>
+                        </a>
+                    </li>
+                    <li class="active-pro">
+                        <a href="upgrade.html">
+                            <i class="pe-7s-rocket"></i>
+                            <p>Upgrade to PRO</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Corretor de Provas Online</p>
-        </footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        <div class="main-panel">
+
+            <nav class="navbar navbar-default navbar-fixed">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">Questões</a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-left">
+                            <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-dashboard"></i>
+                                </a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-globe"></i>
+                                    <b class="caret"></b>
+                                    <span class="notification">5</span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Notification 1</a></li>
+                                    <li><a href="#">Notification 2</a></li>
+                                    <li><a href="#">Notification 3</a></li>
+                                    <li><a href="#">Notification 4</a></li>
+                                    <li><a href="#">Another notification</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa fa-search"></i>
+                                </a>
+                            </li>
+                        </ul>
+
+                    @using (Html.BeginForm("Logout", "Usuario", FormMethod.Post, new { @id = "sessao" }))
+                    {
+                        /*evitamos cross site request forgery*/
+                        @Html.AntiForgeryToken();
+
+                        <ul class="nav navbar-nav navbar-right">
+                        @if (cpf == null)
+                        {
+                            <li>@Html.ActionLink("Entrar", "Login", "Usuario")</li>
+                        }
+                        else
+                        {
+                            <li>
+                                <span>Bem-vindo <strong class="texto">@Html.Raw(cpf.FormatarCPF())</strong></span>
+                            </li>
+                            <li>
+                                <a href="javascript:" onclick="$('#sessao').submit();">Sair</a>
+                            </li>
+                        }
+                        
+                        </ul>
+                    }
+                    </div>
+                </div>
+            </nav>
+
+            <div class="content">
+                @RenderBody()
+            </div>
+        
+            <footer class="footer">
+                <div class="container-fluid">
+                    <nav class="pull-left">
+                        <ul>
+                            <li>
+                                @Html.ActionLink("Voltar ao início", "Lista", "Questao")
+                            </li>
+                            
+                        </ul>
+                    </nav>
+                    <p class="copyright pull-right">
+                        &copy; 2017 <a href="http://about.me/juniormayhe">Wanderley Mayhé Junior</a>
+                    </p>
+                </div>
+            </footer>
+
+
+        </div><!--main panel-->
+    </div><!--wrapper-->
+
+
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
