--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Editar.cshtml
@@ -5,77 +5,120 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Editar</h2>
-
 @using (Html.BeginForm())
 {
+    /*evitamos cross site request forgery*/
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Questão</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.QuestaoID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoNumero, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.QuestaoNumero, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.QuestaoNumero, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="header">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoEnunciado, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.QuestaoEnunciado, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.QuestaoEnunciado, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <h4 class="title">Editar questão</h4>
+                    <p class="category">Atualize os dados da questão abaixo</p>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoGradeFidelidadeAoTema, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.QuestaoGradeFidelidadeAoTema, new { htmlAttributes = new { @class = "form-control grade" } })
-                @Html.ValidationMessageFor(model => model.QuestaoGradeFidelidadeAoTema, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                </div>
+                <div class="content">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoGradeOrganizacaoIdeias, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.QuestaoGradeOrganizacaoIdeias, new { htmlAttributes = new { @class = "form-control grade" } })
-                @Html.ValidationMessageFor(model => model.QuestaoGradeOrganizacaoIdeias, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.QuestaoID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoGradeNivelDeLinguagem, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.QuestaoGradeNivelDeLinguagem, new { htmlAttributes = new { @class = "form-control grade" } })
-                @Html.ValidationMessageFor(model => model.QuestaoGradeNivelDeLinguagem, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="row">
+                        <div class="col-md-12">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.QuestaoGradeDominioDasRegras, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.QuestaoGradeDominioDasRegras, new { htmlAttributes = new { @class = "form-control grade" } })
-                @Html.ValidationMessageFor(model => model.QuestaoGradeDominioDasRegras, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoNumero, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.QuestaoNumero, new { htmlAttributes = new { @class = "form-control numero" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoNumero, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Salvar" class="btn btn-primary btn-lg" />
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoEnunciado, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.TextAreaFor(model => model.QuestaoEnunciado, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoEnunciado, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoGradeFidelidadeAoTema, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.QuestaoGradeFidelidadeAoTema, new { htmlAttributes = new { @class = "form-control grade" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoGradeFidelidadeAoTema, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoGradeOrganizacaoIdeias, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.QuestaoGradeOrganizacaoIdeias, new { htmlAttributes = new { @class = "form-control grade" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoGradeOrganizacaoIdeias, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoGradeNivelDeLinguagem, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.QuestaoGradeNivelDeLinguagem, new { htmlAttributes = new { @class = "form-control grade" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoGradeNivelDeLinguagem, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.QuestaoGradeDominioDasRegras, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.QuestaoGradeDominioDasRegras, new { htmlAttributes = new { @class = "form-control grade" } })
+                                    @Html.ValidationMessageFor(model => model.QuestaoGradeDominioDasRegras, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10 salvar">
+                                    <input type="submit" value="Salvar" class="btn btn-primary btn-lg mb" />
+                                    @Html.ActionLink("Remover", "Remover", new { @id = Model.QuestaoID}, new { @class = "sidekick text-danger" })
+                                    
+                                </div>
+                                <div class="clearfix"></div>
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    
 }
 
-<div>
-    @Html.ActionLink("Voltar às questões", "Lista")
-</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
