--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/_QuestoesPartialView.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/_QuestoesPartialView.cshtml
@@ -4,10 +4,10 @@
 @using X.PagedList.Mvc
 
 
-<table class="table table-striped">
+<table class="table table-hover table-striped">
     <thead>
         <tr>
-            <th>Questão No.</th>
+            <th>Questão N&ordm;</th>
             <th>Enunciado</th>
             <th>Ações</th>
         </tr>
