--- a/Cesgranrio.CorretorDeProvas.Web/Views/Usuario/Login.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Usuario/Login.cshtml
@@ -5,62 +5,66 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Iniciar sessão</h2>
-
-
 @using (Html.BeginForm())
 {
-    /*eviatamos cross site request forgery*/
+    /*evitamos cross site request forgery*/
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal form-corretor">
-        <h4>Informe suas credenciais abaixo</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*@Html.HiddenFor(model => model.UsuarioID)*@
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control", @placeholder="Informe seu CPF", @maxlength="14" } })
-                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="header">
+                <h4 class="title">Iniciar sessão</h4>
+                <p class="category">Informe suas credenciais abaixo</p>
+                
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             </div>
-        </div>
+            <div class="content">
+                
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe sua senha", @maxlength="50" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.CPF)
+                                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe seu CPF", @maxlength = "14" } })
+                                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Senha)
+                                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe sua senha", @maxlength = "50" } })
+                                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Entrar" class="btn btn-primary btn-lg" />
+
+                    <button type="submit" class="btn btn-info btn-fill pull-right">Entrar</button>
+                    <div class="clearfix"></div>
+                
             </div>
         </div>
     </div>
+</div>
 }
 
-@*<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>*@
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-<script src="~/Scripts/corretordeprovas.util.js"></script>
-<script>
-    $("#CPF").on('blur', function () {
-        if ($(this).val().trim() == '') return;
-        try {
-            var n = parseInt($(this).val().replace(/[^0-9]/g, "")) + '';
-            
-            $(this).val(formatarCPF(padLeft(n, 11)));
-        }
-        catch (ex) {
-            console.log('a string é maior que 14 caracteres');
-        }
-    });
-</script>
-}
+        <script>
+            $("#CPF").on('blur', function () {
+                if ($(this).val().trim() == '') return;
+                try {
+                    var n = parseInt($(this).val().replace(/[^0-9]/g, "")) + '';
+
+                    $(this).val(formatarCPF(padLeft(n, 11)));
+                }
+                catch (ex) {
+                    console.log('a string é maior que 14 caracteres');
+                }
+            });
+        </script>
+    }
