--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Lista.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Lista.cshtml
@@ -17,7 +17,7 @@
                     <p class="category">Abaixo está a lista de questões cadastradas pelo elaborador</p>
                 </div>
                 <div class="col-md-2 adicionar">
-                    @Html.ActionLink("Adicionar", "Adicionar", "Questao", new { @class = "btn btn-primary", @title = "Adicionar uma nova questão" })
+                    @Html.ActionLink("Adicionar", "Adicionar", "Questao", null, htmlAttributes: new { @class = "btn btn-primary", @title = "Adicionar uma nova questão" })
                 </div>
             </div>
             
