--- a/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 <ul class="nav">
                     <li class="active">
                         <a href="/Questao/Lista">
-                            <i class="pe-7s-note2"></i>
+                            <i class="glyphicon glyphicon-list-alt"></i>
                             <p>Questões</p>
                         </a>
                     </li>
@@ -159,7 +159,9 @@
                     <nav class="pull-left">
                         <ul>
                             <li>
-                                @Html.ActionLink("Voltar ao início", "Lista", "Questao")
+                                <a href="/Questao/Lista"><i class="glyphicon glyphicon-chevron-left"></i> Voltar à lista de questões</a>
+
+
                             </li>
                             
                         </ul>
