--- a/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Remover.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Questao/Remover.cshtml
@@ -5,70 +5,118 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Remover questão</h2>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="header">
 
-<h3>Tem certeza que deseja remover esta questão?</h3>
-<div>
-    <h4>Questão</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoNumero)
-        </dt>
+                <h4 class="title">Remover questão</h4>
+                <p class="category">Tem certeza que deseja remover esta questão?</p>
 
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoNumero)
-        </dd>
+            </div>
+            <div class="content">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoEnunciado)
-        </dt>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoNumero)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.TextBoxFor(model => model.QuestaoNumero, htmlAttributes: new { @class = "form-control numero", @disabled = "disabled" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoEnunciado)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.TextAreaFor(model => model.QuestaoEnunciado, htmlAttributes: new { @class = "form-control", @disabled = "disabled" } )
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoGradeFidelidadeAoTema)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.TextBoxFor(model => model.QuestaoGradeFidelidadeAoTema, htmlAttributes: new { @class = "form-control grade", @disabled = "disabled" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoGradeOrganizacaoIdeias)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.TextBoxFor(model => model.QuestaoGradeOrganizacaoIdeias, htmlAttributes: new { @class = "form-control grade", @disabled = "disabled" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoGradeNivelDeLinguagem)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.TextBoxFor(model => model.QuestaoGradeNivelDeLinguagem, htmlAttributes: new { @class = "form-control grade", @disabled = "disabled" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            @Html.DisplayNameFor(model => model.QuestaoGradeDominioDasRegras)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group mb">
+                            @Html.TextBoxFor(model => model.QuestaoGradeDominioDasRegras, htmlAttributes: new { @class = "form-control grade", @disabled = "disabled" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
 
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoEnunciado)
-        </dd>
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
 
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoGradeFidelidadeAoTema)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoGradeFidelidadeAoTema)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoGradeOrganizacaoIdeias)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoGradeOrganizacaoIdeias)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoGradeNivelDeLinguagem)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoGradeNivelDeLinguagem)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QuestaoGradeDominioDasRegras)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QuestaoGradeDominioDasRegras)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Confirmar" class="btn btn-danger btn-lg" />  
-            @Html.ActionLink("Voltar às questões", "Lista", "Questao",
-                new { @class = "ml" })
+                                <div class="form-actions no-color">
+                                    <input type="submit" value="Remover" class="btn btn-danger btn-lg mb" />
+                                    
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    }
+    </div>
 </div>
