--- a/Cesgranrio.CorretorDeProvas.Web/Views/Usuario/Login.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Usuario/Login.cshtml
@@ -26,8 +26,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => model.CPF)
-                                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe seu CPF", @maxlength = "14" } })
-                                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+                                @Html.TextBoxFor(model => model.CPF, htmlAttributes: new { @class = "form-control numero", @placeholder = "Informe seu CPF", @maxlength = "14" })
+                                @Html.ValidationMessageFor(model => model.CPF, "", htmlAttributes: new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -35,14 +35,14 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Senha)
-                                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @placeholder = "Informe sua senha", @maxlength = "50" } })
-                                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                                @Html.PasswordFor(model => model.Senha, htmlAttributes: new { @class = "form-control numero", @placeholder = "Informe sua senha", @maxlength = "50" })
+                                @Html.ValidationMessageFor(model => model.Senha, "", htmlAttributes: new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
 
 
-                    <button type="submit" class="btn btn-info btn-fill pull-right">Entrar</button>
+                    <button type="submit" class="btn btn-primary btn-lg pull-left">Entrar</button>
                     <div class="clearfix"></div>
                 
             </div>
