--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/AcessoNegado.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/AcessoNegado.cshtml
@@ -4,14 +4,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Você precisa iniciar sua sessão!</h2>
-
 <div class="row">
-    <div class="alert alert-danger" role="alert">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span class="sr-only">Prezado(a) usuário(a):</span>
-        Para utilizar o sistema, informe suas credenciais na @Html.ActionLink("Página de acesso", "Login", "Usuario").
+    <div class="col-md-12">
+        <div class="card-user alert radius purple fundo">
+            <h4 class="title text-center">
+                Acesso negado
+            </h4>
+            <br />
+            <div class="image text-center img-rounded">
+                <img id="jim" src="https://media.giphy.com/media/ZXIw1GQPMI7aU/giphy.gif" class="img-responsive img-rounded" />
+            </div>
+            <br />
+            <div class="content text-center">
+                <p>Para utilizar o sistema, informe suas credenciais na @Html.ActionLink("Página de acesso", "Login", "Usuario").</p>
+            </div>
+        </div>
     </div>
 </div>
-
-
