--- a/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
+++ b/Cesgranrio.CorretorDeProvas.Web/Content/Site.css
@@ -126,3 +126,40 @@ textarea {
 .card > .row:last-child{
     margin-bottom: 0
 }
+
+@keyframes color-animation {
+    0% {
+        
+        border-radius: 20px;
+    
+        color:#fff;
+        background: #6a1b9a;
+    }
+
+    100% {
+        color: #333;
+        background: #f1f3f4;
+        border-radius: 0px;
+    }
+}
+.radius {
+    border-radius: 10px;
+}
+.fundo {
+    margin: auto;
+    width: calc(100% - 56px);
+}
+@media (min-width: 992px) {
+    .fundo {
+        margin: auto;
+        width: 40%
+    }
+}
+.fundo-animado {
+    animation: color-animation 3s infinite linear alternate;
+    
+}
+
+.img-responsive {margin:auto
+}
+
