--- a/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
@@ -38,47 +38,19 @@
                         </a>
                     </li>
                     <li>
-                        <a href="user.html">
-                            <i class="pe-7s-user"></i>
-                            <p>Sobre</p>
+                        <a href="/Pontuacao/SimularRespostas">
+                            <i class="glyphicon glyphicon-flash"></i>
+                            <p>Simular respostas</p>
                         </a>
                     </li>
                     <li>
-                        <a href="table.html">
-                            <i class="pe-7s-note2"></i>
-                            <p>Tabela</p>
+                        <a href="/Pontuacao/CorrigirRespostas">
+                            <i class="glyphicon glyphicon-edit"></i>
+                            <p>Corrigir questões</p>
                         </a>
                     </li>
-                    <li>
-                        <a href="typography.html">
-                            <i class="pe-7s-news-paper"></i>
-                            <p>Typography</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="icons.html">
-                            <i class="pe-7s-science"></i>
-                            <p>Icons</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="maps.html">
-                            <i class="pe-7s-map-marker"></i>
-                            <p>Maps</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="notifications.html">
-                            <i class="pe-7s-bell"></i>
-                            <p>Notifications</p>
-                        </a>
-                    </li>
-                    <li class="active-pro">
-                        <a href="upgrade.html">
-                            <i class="pe-7s-rocket"></i>
-                            <p>Upgrade to PRO</p>
-                        </a>
-                    </li>
+                    
+                
                 </ul>
             </div>
         </div>
@@ -97,32 +69,7 @@
                         <a class="navbar-brand" href="#">Questões</a>
                     </div>
                     <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-left">
-                            <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-dashboard"></i>
-                                </a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-globe"></i>
-                                    <b class="caret"></b>
-                                    <span class="notification">5</span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Notification 1</a></li>
-                                    <li><a href="#">Notification 2</a></li>
-                                    <li><a href="#">Notification 3</a></li>
-                                    <li><a href="#">Notification 4</a></li>
-                                    <li><a href="#">Another notification</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <i class="fa fa-search"></i>
-                                </a>
-                            </li>
-                        </ul>
+                        
 
                     @using (Html.BeginForm("Logout", "Usuario", FormMethod.Post, new { @id = "sessao" }))
                     {
