--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/PaginaNaoEncontrada.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/PaginaNaoEncontrada.cshtml
@@ -27,7 +27,7 @@
                     tentou acessar <br>
                     não está por aqui!
                 </p>
-                <p>Retorne à @Html.ActionLink("Página inicial", "Lista", "Questao").</p>
+                <p>Retorne à @Html.ActionLink("Página inicial", "Listar", "Questao").</p>
             </div>
 
 
