--- a/Cesgranrio.CorretorDeProvas.Web/Views/Erro/RequisicaoInvalida.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Erro/RequisicaoInvalida.cshtml
@@ -16,7 +16,7 @@
             </div>
             <br />
             <div class="content text-center">
-                <p>Você informou dados inválidos.<br />Retorne à @Html.ActionLink("Página inicial", "Lista", "Questao") e preencha corretamente os dados necessários.</p>
+                <p>Você informou dados inválidos.<br />Retorne à @Html.ActionLink("Página inicial", "Listar", "Questao") e preencha corretamente os dados necessários.</p>
             </div>
         </div>
     </div>
