--- a/Cesgranrio.CorretorDeProvas.Web/Views/Pontuacao/CorrigirRespostas.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Pontuacao/CorrigirRespostas.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cesgranrio.CorretorDeProvas.Web.Models.PontuacaoVM
+﻿@model Cesgranrio.CorretorDeProvas.Web.Models.RespostaVM
 
 @using X.PagedList.Mvc
 @{
