--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/CorrigirRespostas.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/CorrigirRespostas.cshtml
@@ -21,7 +21,7 @@
             <div class="table-responsive table-full-width">
 
                 <span id="tabelaQuestoes">
-                    @Html.Partial("_PontuacoesPartialView", Model)
+                    @Html.Partial("_RespostasPartialView", Model)
                 </span>
 
             </div>
