--- a/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Questões</a>
+                        <a class="navbar-brand" href="#">@Html.Raw(ViewBag.Title)</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         
