dealing with concurrency for editing

--- a/Cesgranrio.CorretorDeProvas.Web/Content/lightbox.css
+++ b/Cesgranrio.CorretorDeProvas.Web/Content/lightbox.css
@@ -200,3 +200,13 @@ body:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
+
+/* change size and color of lightbox closing 'X' */
+.lb-close {
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    transform: scale(0.5);
+    margin-top:-5px;
+    
+}
