--- a/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/CorrigirRespostas.cshtml
+++ b/Cesgranrio.CorretorDeProvas.Web/Views/Resposta/CorrigirRespostas.cshtml
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="header">
                 <div class="col-md-12">
-                    <h4 class="title">Corrigir respostas</h4>
+                    <h4 class="title">Lista de respostas</h4>
                     <p class="category">Abaixo está a lista de questões respondidas pelos candidatos</p>
                 </div>
                 
